--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   },
   "engines": {
     "node": ">=7.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/freaktechnik/github-stub.git"
+  },
+  "bugs": {
+    "url": "https://github.com/freaktechnik/github-stub/issues"
+  },
+  "homepage": "https://github.com/freaktechnik/github-stub#readme"
 }
