--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ node_js: stable
 before_install: npm install -g npm greenkeeper-lockfile
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+after_success: npm run coverage
