--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint . --ext js,json",
-    "test": "npm run lint"
+    "test": "npm run lint && nyc ava",
+    "coverage": "nyc report && codecov"
   },
   "keywords": [
     "github",
@@ -16,7 +17,11 @@
   "license": "MIT",
   "devDependencies": {
     "@freaktechnik/eslint-config-node": "^5.2.1",
-    "eslint": "^4.9.0"
+    "@freaktechnik/eslint-config-test": "^5.2.1",
+    "ava": "^0.22.0",
+    "codecov": "^3.0.0",
+    "eslint": "^4.9.0",
+    "nyc": "^11.2.1"
   },
   "dependencies": {
     "github": "^11.0.0",
@@ -32,5 +37,11 @@
   "bugs": {
     "url": "https://github.com/freaktechnik/github-stub/issues"
   },
-  "homepage": "https://github.com/freaktechnik/github-stub#readme"
+  "homepage": "https://github.com/freaktechnik/github-stub#readme",
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
+  }
 }
