--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "author": "Martin Giger (https://humanoids.be)",
   "license": "MIT",
   "devDependencies": {
-    "@freaktechnik/eslint-config-test": "^6.0.0",
     "@freaktechnik/eslint-config-node": "^6.0.0",
+    "@freaktechnik/eslint-config-test": "^6.0.0",
     "ava": "^0.23.0",
     "codecov": "^3.0.0",
-    "eslint": "^4.9.0",
-    "nyc": "^11.2.1"
+    "eslint": "^4.11.0",
+    "nyc": "^11.3.0"
   },
   "dependencies": {
-    "github": "12.0.1",
-    "sinon": "^4.0.1"
+    "github": "^12.0.2",
+    "sinon": "^4.1.2"
   },
   "engines": {
     "node": ">=7.6.0"
