--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nyc": "^11.3.0"
   },
   "dependencies": {
-    "github": "^12.0.2",
+    "github": "12.0.2",
     "sinon": "^4.1.2"
   },
   "engines": {
