--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@freaktechnik/eslint-config-node": "^6.0.0",
     "@freaktechnik/eslint-config-test": "^6.0.0",
+    "@octokit/fixtures": "^5.4.1",
     "ava": "^0.24.0",
     "codecov": "^3.0.0",
     "eslint": "^4.11.0",
