--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "devDependencies": {
     "@freaktechnik/eslint-config-node": "^6.0.0",
     "@freaktechnik/eslint-config-test": "^6.0.0",
-    "@octokit/fixtures": "^5.4.1",
+    "@octokit/fixtures": "^5.5.0",
     "ava": "^0.24.0",
     "codecov": "^3.0.0",
-    "eslint": "^4.12.1",
-    "nyc": "^11.4.0"
+    "eslint": "^4.15.0",
+    "nyc": "^11.4.1"
   },
   "dependencies": {
-    "github": "13.0.1",
+    "github": "^13.1.0",
     "sinon": "^4.1.3"
   },
   "engines": {
