--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nyc": "^11.4.1"
   },
   "dependencies": {
-    "github": "^13.1.0",
+    "@octokit/rest": "^14.0.3",
     "sinon": "^4.1.3"
   },
   "engines": {
