--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nyc": "^11.4.1"
   },
   "dependencies": {
-    "@octokit/rest": "^14.0.9",
+    "@octokit/rest": "14.0.9",
     "sinon": "^4.3.0"
   },
   "engines": {
