--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   "author": "Martin Giger (https://humanoids.be)",
   "license": "MIT",
   "devDependencies": {
-    "@freaktechnik/eslint-config-node": "^6.3.1",
-    "@freaktechnik/eslint-config-test": "^6.3.2",
+    "@freaktechnik/eslint-config-node": "^6.3.5",
+    "@freaktechnik/eslint-config-test": "^6.3.5",
     "@octokit/fixtures": "^8.0.0",
     "ava": "^0.25.0",
-    "codecov": "^3.0.0",
-    "eslint": "^4.18.1",
-    "nyc": "^11.5.0"
+    "codecov": "^3.0.2",
+    "eslint": "^4.19.1",
+    "nyc": "^11.8.0"
   },
   "dependencies": {
-    "@octokit/rest": "15.4.0",
-    "sinon": "^5.0.0"
+    "@octokit/rest": "^15.7.0",
+    "sinon": "^5.0.10"
   },
   "engines": {
     "node": ">=7.6.0"
