--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "nyc": "^11.8.0"
   },
   "dependencies": {
-    "@octokit/rest": "^15.7.0",
+    "@octokit/rest": "15.7.0",
     "sinon": "^5.0.10"
   },
   "engines": {
