--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "devDependencies": {
     "@freaktechnik/eslint-config-node": "^6.4.4",
     "@freaktechnik/eslint-config-test": "^6.4.4",
-    "@octokit/fixtures": "^8.3.0",
+    "@octokit/fixtures": "^8.5.0",
     "ava": "^0.25.0",
     "codecov": "^3.0.4",
-    "eslint": "^5.1.0",
-    "nyc": "^12.0.2"
+    "eslint": "^5.5.0",
+    "nyc": "^13.0.1"
   },
   "dependencies": {
-    "@octokit/rest": "15.9.6",
-    "sinon": "^6.1.3"
+    "@octokit/rest": "^15.11.0",
+    "sinon": "^6.1.5"
   },
   "engines": {
     "node": ">=7.6.0"
